<resources>
    <string name="app_name">Android RUN !</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Note Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="editor_fragment">Editor</string>
    <string name="input_hint">Enter Markdown code...</string>
    <string name="preview">preview</string>
    <string name="code">code</string>

    <string name="delete_confirmation">Do you want to delete this note?</string>
    <string name="delete_success">Deleted successfully</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="navigate_to_editor">Navigate to editor</string>
    <string name="empty_content_message">The content can\'t be empty!</string>
    <string name="note_updated_message">The modification was successful</string>
    <string name="update_failed_message">The modification failed</string>
    <string name="save_failed_message">Save failed</string>
    <string name="note_saved_message">Save successfully</string>
    <string name="name_hint">Note Name</string>
    <string name="search_desc">Search</string>
    <string name="log_out">Log Out</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="RememberMe">Remember Me</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Logo">Android RUN !</string>
    <string name="FirstName">FirstName</string>
    <string name="LastName">LastName</string>
    <string name="Email">Email</string>
    <string name="ConfirmEmailAddress">Confirm Email Address</string>
    <string name="SignUp">Sign Up</string>
    <string name="registrationPage">Registration Page</string>

    <!--AI-->
    <string name="webview_title">DeepSeek AI</string>
    <string name="chat_hint">Message</string>
    <!--AI-->

</resources>