<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <!-- NoteListFragment -->
    <fragment
        android:id="@+id/nav_home"
        android:name="hku.cs.notebook.ui.note_list.NoteListFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_list_home">
        <!-- Action to navigate to EditorFragment -->
        <action
            android:id="@+id/action_noteListFragment_to_editorFragment"
            app:destination="@id/editorFragment" />
    </fragment>

    <!-- GalleryFragment -->
    <fragment
        android:id="@+id/nav_gallery"
        android:name="hku.cs.notebook.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <!-- SlideshowFragment -->
    <fragment
        android:id="@+id/nav_slideshow"
        android:name="hku.cs.notebook.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <!-- EditorFragment -->
    <fragment
        android:id="@+id/editorFragment"
        android:name="hku.cs.notebook.ui.editor.EditorFragment"
        android:label="@string/editor_fragment"
        tools:layout="@layout/fragment_editor" />
</navigation>
