<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- 名称编辑器 -->
        <EditText
            android:id="@+id/note_name"
            android:hint="@string/name_hint"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:background="#fefefe"
            android:visibility="visible"
            android:layout_height="40dp"
            android:layout_width="match_parent"/>

        <!-- 日期和切换按钮 -->
        <LinearLayout
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center_vertical">

            <!-- 日期显示 -->
            <TextView
                android:id="@+id/tv_time"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/purple_700" />

            <!-- 切换按钮 -->
            <Button
                android:id="@+id/btn_code_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/code" />

            <Button
                android:id="@+id/btn_preview_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/preview" />
        </LinearLayout>

        <!-- Markdown 编辑和预览区域 -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <!-- 编辑模式 -->

            <EditText
                android:id="@+id/note_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:hint="@string/input_hint"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:background="#fefefe"
                android:inputType="textMultiLine"
                android:visibility="visible" />

            <!-- 预览模式 -->
            <ScrollView
                android:id="@+id/md_preview_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <TextView
                    android:id="@+id/md_preview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="@android:color/black" />
            </ScrollView>
        </FrameLayout>

        <!-- 操作按钮 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/delete"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_delete"
                android:paddingBottom="15dp"
                android:paddingTop="9dp" />

            <ImageView
                android:id="@+id/note_save"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_save"
                android:paddingBottom="15dp"
                android:paddingTop="9dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
